--- a/书生·浦语第一课笔记.md
+++ b/书生·浦语第一课笔记.md
@@ -16,7 +16,7 @@
 
 #### 书生·浦语2.0（InternLM2）的体系
 
-![image-20240329095401075](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240329095401075.png)
+![image-20240329095401075](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240329095401075.png)
 
 #### 主要亮点：
 
@@ -30,18 +30,18 @@
 
 #### 模型应用的流程：
 
-![image-20240329095526663](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240329095526663.png)
+![image-20240329095526663](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240329095526663.png)
 
 #### 高质量预料数据
 
-![image-20240329095551469](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240329095551469.png)
+![image-20240329095551469](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240329095551469.png)
 
 #### 预训练技术：
 
 - 支持多卡训练
 - 速度提升50%，多种并行策略
 
-![image-20240329095608107](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240329095608107.png)
+![image-20240329095608107](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240329095608107.png)
 
 #### 微调：
 
@@ -54,7 +54,7 @@
 
 #### 高效微调框架XTuner：
 
-![image-20240330160702089](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240330160702089.png)
+![image-20240330160702089](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240330160702089.png)
 
 
 
@@ -92,7 +92,7 @@ CompassKit：大模型评测全栈工具链
 
 LMDeploy提供大模型在GPU上部署的全流程解决方案，包括模型轻量化、推理和服务
 
-![image-20240330165907236](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240330165907236.png)
+![image-20240330165907236](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240330165907236.png)
 
 优势：
 
@@ -104,7 +104,7 @@ LMDeploy提供大模型在GPU上部署的全流程解决方案，包括模型轻
 
 #### 智能体：
 
-![image-20240330170009708](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240330170009708.png)
+![image-20240330170009708](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240330170009708.png)
 
 
 
