--- a/第三课作业.md
+++ b/第三课作业.md
@@ -6,35 +6,35 @@
 
 - 创建自己的数据，我创建了一个亮剑主人公李云龙的数据
 
-  ![image-20240411182802398](img\image-20240411182802398.png)
+  ![image-20240411182802398](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240411182802398.png)
 
 - 设置正反例让茴香豆可以更好的回复信息或者避免回复和相关领域无关信息
 
-  ![image-20240411183414028](img\image-20240411183414028.png)
+  ![image-20240411183414028](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240411183414028.png)
 
-  ![image-20240411183420382](img\image-20240411183420382.png)
+  ![image-20240411183420382](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240411183420382.png)
 
 - 开始尝试聊天
 
 ​	问题一：李云龙是谁？
 
-![image-20240411183536082](img\image-20240411183536082.png)
+![image-20240411183536082](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240411183536082.png)
 
 ​	问题二：他参加过哪些战争？
 
-![image-20240411183613339](img\image-20240411183613339.png)
+![image-20240411183613339](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240411183613339.png)
 
 ​	问题三：他都担任过什么职务？（敏感问题，无法显示。。。。。）
 
-![image-20240411183910264](img\image-20240411183910264.png)
+![image-20240411183910264](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240411183910264.png)
 
 ​	问题四：李云龙是怎么参加八路军的？
 
-![image-20240411184036683](img\image-20240411184036683.png)
+![image-20240411184036683](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240411184036683.png)
 
 ​	问题五：尝试加入反例：今天晚上吃什么？
 
-![image-20240411184137988](img\image-20240411184137988.png)
+![image-20240411184137988](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240411184137988.png)
 
 可以看出，茴香豆并没有给出回应，说明它意识到这是个需要拒答的问题。
 
@@ -68,7 +68,7 @@
 
 ​	修改完成后如下图所示：
 
-![image-20240407103955749](img\image-20240407103955749.png)
+![image-20240407103955749](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240407103955749.png)
 
 2. 创建知识库
 
@@ -81,7 +81,7 @@
    git clone https://github.com/internlm/huixiangdou --depth=1 repodir/huixiangdou
    ```
 
-   ![image-20240407104549705](img\image-20240407104549705.png)
+   ![image-20240407104549705](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240407104549705.png)
 
    提取知识库特征，创建向量数据库。数据库向量化的过程应用到了 **LangChain** 的相关模块，默认嵌入和重排序模型调用的网易 **BCE 双语模型**，如果没有在 `config.ini` 文件中指定本地模型路径，茴香豆将自动从 **HuggingFace** 拉取默认模型。
 
@@ -146,7 +146,7 @@ echo '[
 ]' > /root/huixiangdou/resource/good_questions.json
 ```
 
-![image-20240407104626077](img\image-20240407104626077.png)		
+![image-20240407104626077](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240407104626077.png)		
 
 ​		再创建一个测试用的问询列表，用来测试拒答流程是否起效：
 
@@ -159,7 +159,7 @@ echo '[
 ]' > ./test_queries.json
 ```
 
-​		![image-20240407104653926](img\image-20240407104653926.png)
+​		![image-20240407104653926](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240407104653926.png)
 
 ​		在确定好语料来源后，运行下面的命令，创建 RAG 检索过程中使用的向量数据库：
 
@@ -173,13 +173,13 @@ python3 -m huixiangdou.service.feature_store --sample ./test_queries.json
 
 ​		向量数据库的创建需要等待一小段时间，过程约占用 1.6G 显存。
 
-![image-20240407112054201](img\image-20240407112054201.png)
+![image-20240407112054201](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240407112054201.png)
 
 ​		完成后，**Huixiangdou** 相关的新增知识就以向量数据库的形式存储在 `workdir` 文件夹下。
 
 ​		检索过程中，茴香豆会将输入问题与两个列表中的问题在向量空间进行相似性比较，判断该问题是否应该回答，避免群聊过程中的问答泛滥。确定的回答的问题会利用基础模型提取关键词，在知识库中检索 `top K` 相似的 `chunk`，综合问题和检索到的 `chunk` 生成答案。
 
-![image-20240407112127367](img\image-20240407112127367.png)
+![image-20240407112127367](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240407112127367.png)
 
 3. 运行茴香豆知识助手
 
@@ -194,14 +194,14 @@ python3 -m huixiangdou.service.feature_store --sample ./test_queries.json
 
    RAG 技术的优势就是非参数化的模型调优，这里使用的仍然是基础模型 `InternLM2-Chat-7B`， 没有任何额外数据的训练。面对同样的问题，我们的**茴香豆技术助理**能够根据我们提供的数据库生成准确的答案：
 
-![image-20240407112612425](img\image-20240407112612425.png)
+![image-20240407112612425](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240407112612425.png)
 
-![image-20240407112622986](img\image-20240407112622986.png)
+![image-20240407112622986](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/image-20240407112622986.png)
 
 web版的部署尝试了很多次，均没有运行成功，过程截图如下：
 
-![3462d66ff4ef37aecc5faa477662ed8](img\3462d66ff4ef37aecc5faa477662ed8.png)
+![3462d66ff4ef37aecc5faa477662ed8](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/3462d66ff4ef37aecc5faa477662ed8.png)
 
-![4db930630d1cbd7986bcc9dbf98ae11](img\4db930630d1cbd7986bcc9dbf98ae11.png)
+![4db930630d1cbd7986bcc9dbf98ae11](https://github.com/WangXuCh/InternIM2-learning-record/blob/main/typora-user-images/4db930630d1cbd7986bcc9dbf98ae11.png)
 
 总结：在Studio上部署茴香豆技术助手还是需要一点能力去处理遇到的bug的。这部分相对于第一部分来说，操作稍微有点麻烦，不过最后的结果还是好的，毕竟大家都是要从源码入手的，而不是一个简单的web-demo。
